mise en place du systeme de routage

--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script href="/js/index.js" defer></script>
-    <link rel="stylesheet" href="scss/main.css"/>
-    <title>Document</title>
+    <link rel="stylesheet" href="/scss/main.css"/>
+    <title>Zoo Arcadia</title>
 </head>
 <body>
 
 
 <header>
 
-<p> Le header de la page</p>
+  Le menu   
+  Sera mis ici,  
+  et il sera modifiable pour toutes les pages. 
 
 </header>
 
 
-<main>
+<main id="main-page">
 
     
-        <p> La page sera injecte ici</p>
+        <!--La page sera injecte ici-->
     
-<button class="btn btn-primary">Générale/Primary</button>
-<button class="btn btn-secondary">Bouton/Secondary</button>
-<button class="btn btn-dark">Savane/Dark</button>
-<button class="btn btn-info">Jungle/info</button>
-<button class="btn btn-success">Marais/success</button>
+
 </main>
 
 
 <footer>
 
-    <p> le footer de la page </p>
+    le footer de mon site sera mis ici 
+    Et il sera modigiable pour toutes les pages.
 
 </footer>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/Router/Router.js"></script>
+<!--<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>-->
 </body>
 </html>
