--- a/Pages/home.html
+++ b/Pages/home.html
@@ -1,6 +1,6 @@
 <h1>Bienvenu sur le site du Zoo Arcadia</h1>
 <div>
-
+<button class="btn btn-info">coucou</button>
     
 <button class="btn btn-primary">Générale/Primary</button>
 <button class="btn btn-secondary">Bouton/Secondary</button>
