--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <script href="/js/index.js" defer></script>
     <link rel="stylesheet" href="/scss/main.css"/>
     <title>Zoo Arcadia</title>
@@ -15,6 +17,8 @@
   Le menu   
   Sera mis ici,  
   et il sera modifiable pour toutes les pages. 
+
+  <i class="bi bi-airplane-engines"></i>
 
 </header>
 
@@ -35,6 +39,6 @@
 
 </footer>
 <script type="module" src="/Router/Router.js"></script>
-<!--<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>-->
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js">
 </body>
 </html>
